plugins {
    id 'java'
}

group 'me.cocolennon'
version '1.4.0'

repositories {
    mavenCentral()
    mavenLocal()

    maven { url = 'https://repo.papermc.io/repository/maven-public/' }
    maven { url = 'https://repo.glaremasters.me/repository/towny/' }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.21.8-R0.1-SNAPSHOT'
    compileOnly 'com.palmergames.bukkit.towny:towny:0.101.2.2'
    compileOnly files("libs/TownyMenus-0.0.13.jar")
}

sourceCompatibility = targetCompatibility = '21'
compileJava.options.encoding = 'UTF-8'
setLibsDirName('../builds')
